--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,49 +1,33 @@
 @import '~bootstrap-sass/assets/stylesheets/bootstrap-sprockets';
 @import '~bootstrap-sass/assets/stylesheets/bootstrap';
 @import 'variables';
+html {
+    height: 100%;
+}
 body {
-    background: $bodyColor;
-}
-
-.example {
-    background: red;
-}
-.example-enter {
-    opacity: 0.01;
-}
-
-.example-enter.example-enter-active {
-    opacity: 1;
-    transition: opacity 500ms ease-in;
-}
-
-.example-leave {
-    opacity: 1;
-}
-
-.example-leave.example-leave-active {
-    opacity: 0.01;
-    transition: opacity 300ms ease-in;
+    height: 100%;
 }
 
 
-
+.pageSlider-enter, .pageSlider-leave {
+    transform-origin: 50% 0;
+    transition: all 5s ease-in;
+}
 .pageSlider-enter {
+    transform: translateZ(-100px) rotateX(10deg);
+    transition-timing-function: cubic-bezier(.79,-1.06,.25,1.93);
     opacity: 0;
-    transition: all 0.5s 0.3s ease;
 }
 
 .pageSlider-enter.pageSlider-enter-active {
+    transform: translateZ(0) rotateX(0);
     opacity: 1;
 }
 
-.pageSlider-leave {
-    opacity: 1;
-    transition: all 0.5s ease;
-}
 
 .pageSlider-leave.pageSlider-leave-active {
     opacity: 0;
+    transform: translateZ(-200px) rotateX(-10deg);
 }
 
 .page {
@@ -51,7 +35,8 @@ body {
     position: relative;
     height: 100%;
     width: 100%;
-    margin-top: 35px;
+    perspective: 1000px;
+    perspective-origin: 50% 0;
 
     > * {
         position: absolute;
@@ -60,6 +45,18 @@ body {
         left: 0;
         width: 100%;
         height: 100%;
+        padding-top: 35px;
+        background: #eee;
         z-index: 1000;
     }
+}
+
+#root {
+    &, [data-reactroot], [data-reactroot] > main {
+        height: 100%;
+    }
+}
+
+* {
+    box-sizing: border-box;
 }
