--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,54 +1,47 @@
 @import '~bootstrap-sass/assets/stylesheets/bootstrap-sprockets';
 @import '~bootstrap-sass/assets/stylesheets/bootstrap';
 @import 'variables';
+
 html {
     height: 100%;
 }
+
 body {
     height: 100%;
 }
 
-
 .pageSlider-enter, .pageSlider-leave {
-    transform-origin: 50% 0;
-    transition: all 5s ease-in;
+    transition: all .5s ease;
 }
+
 .pageSlider-enter {
-    transform: translateZ(-100px) rotateX(10deg);
-    transition-timing-function: cubic-bezier(.79,-1.06,.25,1.93);
-    opacity: 0;
+    transform: translateY(-100%);
 }
 
 .pageSlider-enter.pageSlider-enter-active {
-    transform: translateZ(0) rotateX(0);
-    opacity: 1;
+    transform: translateY(0);
 }
 
+.pageSlider-leave {
+    transform: translateY(0);
+}
 
 .pageSlider-leave.pageSlider-leave-active {
-    opacity: 0;
-    transform: translateZ(-200px) rotateX(-10deg);
+    transform: translateY(100%);
 }
 
 .page {
+    position: absolute;
     display: block;
-    position: relative;
-    height: 100%;
+    top: 0;
+    left: 0;
     width: 100%;
-    perspective: 1000px;
-    perspective-origin: 50% 0;
+    height: 100%;
+    padding: 70px 20px 20px;
+    background: #eee;
+    z-index: 1000;
+    overflow: auto;
 
-    > * {
-        position: absolute;
-        display: block;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        padding-top: 35px;
-        background: #eee;
-        z-index: 1000;
-    }
 }
 
 #root {
