- implemented link prefetcher and page/post caching - implemented rc-animate

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -11,7 +11,7 @@ body {
 }
 
 .pageSlider-enter, .pageSlider-leave {
-    transition: all .5s ease;
+    transition: all 1s ease;
 }
 
 .pageSlider-enter {
