--- a/app/components/circles/styles.scss
+++ b/app/components/circles/styles.scss
@@ -12,13 +12,13 @@
     box-shadow: inset 0 0 0 rgba(0,0,0,0.3);
     transition: all 1s ease;
 
-    &.loading {
-        box-shadow: inset 0 0 500px rgba(0,0,0,0.3);
-
+    //&.loading {
+    //    box-shadow: inset 0 0 500px rgba(0,0,0,0.3);
+    //
         .circle .color {
-            transform: scale(0);
+            transform: scale(0.5);
         }
-    }
+    //}
 
 }
 
