--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,6 +1,7 @@
 @import '~bootstrap-sass/assets/stylesheets/bootstrap-sprockets';
 @import '~bootstrap-sass/assets/stylesheets/bootstrap';
 @import 'variables';
+@import 'typography';
 
 html {
     height: 100%;
@@ -38,7 +39,6 @@ body {
     width: 100%;
     height: 100%;
     padding: 70px 20px 20px;
-    background: #eee;
     z-index: 1000;
     overflow: auto;
 
